# tap-crowd-dev

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: constraints.txt  test.yml
tap_crowd_dev/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: conftest.py  test_core.py
