[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core<2,>=1",
]

[tool.poetry]
name = "tap-crowd-dev"
version = "0.0.1"
description = "`tap-crowd-dev` is a Singer tap for Crowd Dev, built with the Meltano SDK for Singer Taps."
authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
keywords = [
  "ELT",
  "singer.io",
  "Crowd Dev",
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/edgarrmondragon/tap-crowd-dev"
repository = "https://github.com/edgarrmondragon/tap-crowd-dev"
documentation = "https://github.com/edgarrmondragon/tap-crowd-dev#readme"

[tool.poetry.dependencies]
python = ">=3.8,<4"
singer-sdk = "~=0.35.0"

[tool.poetry.group.dev.dependencies]
singer-sdk = {version="*", extras=["testing"]}
requests-cache = {version = "^1.1.0", python = "<4.0"}

[tool.poetry.scripts]
# CLI declaration
"tap-crowd-dev" = "tap_crowd_dev.tap:TapCrowdDev.cli"

[tool.ruff]
line-length = 88
src = ["tap_crowd_dev", "tests"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
  "ANN101", # missing-type-self
  "DJ",     # flake8-django
  "COM812",  # missing-trailing-comma
  "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]
unfixable = [
  "ERA001",  # commented-out-code
]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN"]
"tests/*" = [
  "ANN201",  # missing-return-type-public-function
  "S101",    # assert
  "SLF001",  # private-member-access
]

[tool.ruff.lint.isort]
known-first-party = ["tap_crowd_dev"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["backoff.*"]
